tests/ui/impl-trait/in-trait/unconstrained-lt.stderr
error[E0207]: the lifetime parameter `'a` is not constrained by the impl trait, self type, or predicates
  --> $DIR/unconstrained-lt.rs:7:6
   |
LL | impl<'a, T> Foo for T {
   |      ^^ unconstrained lifetime parameter

error: aborting due to previous error

For more information about this error, try `rustc --explain E0207`.
